# CCS

./: .buildinfo  .coverage  .flake8  .gitignore  Basic_Tutorial.html  CHANGELOG.md  DB2TRAIN.py  DFTB.db  MANIFEST.in  README.md  changelog.html  coverage.xml  examples.html  gen_ccs.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: CI_CD.yml  ci-cd.yml
_modules/: index.html
_modules/ccs/common/: exceptions.html  io.html  neighborlist.html
_modules/ccs/fitting/: main.html  objective.html  spline_functions.html
_modules/ccs/scripts/: ccs_build_db.html  ccs_export_sktable.html  ccs_fetch.html  ccs_fit.html  ccs_validate.html  jsonTotable.html
_modules/ccs_fit/common/: exceptions.html  io.html  neighborlist.html
_modules/ccs_fit/fitting/: main.html  objective.html  spline_functions.html
_modules/ccs_fit/scripts/: ccs_build_db.html  ccs_export_FF.html  ccs_export_sktable.html  ccs_fetch.html  ccs_fetch_wF.html  ccs_fit.html  ccs_prune.html  ccs_validate.html  jsonTotable.html
_sources/: Basic_Tutorial.ipynb.txt  examples.md.txt  gen_ccs.ipynb.txt  index.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/buck/: index.rst.txt
_sources/autoapi/ccs/: index.rst.txt
_sources/autoapi/ccs_ase_G2B/: index.rst.txt
_sources/autoapi/ccs_ase_calculator/: index.rst.txt
_sources/autoapi/ccs_fit/: index.rst.txt
_sources/autoapi/ccs_ppmd/: index.rst.txt
_sources/autoapi/timing/: index.rst.txt
autoapi/: index.html
autoapi/buck/: index.html
autoapi/ccs/: index.html
autoapi/ccs/common/: index.html
autoapi/ccs/data/: index.html
autoapi/ccs/fitting/: index.html
autoapi/ccs/scripts/: index.html
autoapi/ccs_ase_G2B/: index.html
autoapi/ccs_ase_calculator/: index.html
autoapi/ccs_fit/: index.html
autoapi/ccs_fit/common/: index.html
autoapi/ccs_fit/data/: index.html
autoapi/ccs_fit/fitting/: index.html
autoapi/ccs_fit/scripts/: index.html
autoapi/ccs_ppmd/: index.html
autoapi/regression/: index.html
autoapi/timing/: index.html
ccs/: atom-json.py  input.py  main.py  objective.py  spline_functions.py
ccs/_fitting/: objective.py
ccs/ase_calculator/: ccs_ase_calculator.py
ccs/ase_tools/: ccs_ase_calculator.py
ccs/common/: exceptions.py  io.py  neighborlist.py
ccs/common/math/: ewald.py
ccs/data/: conversion.py
ccs/debugging_tools/: timing.py
ccs/fitting/: '  main copy.py  main.py  objective.py  spline_functions.py
ccs/ppmd_interface/: ccs_ppmd.py
ccs/regression_tool/: regression.py  regression_leftaligned.py  regression_old2.py  regression_oldsimpleversion.py
ccs/scripts/: __init__.py  atom_json.py  ccs_build_db copy.py  ccs_build_db.py  ccs_export_sktable.py  ccs_fetch.py  ccs_fit.py  ccs_validate.py  jsonTotable.py
ccs/tools_and_scripts/: ccs_ase_calculator.py  fetch_trainingset.py
ccs_fit/: meta.yaml
docs/: Basic_Tutorial.ipynb  DFT_DB.db  LJ.db  Makefile  ccs.spl  conf.py  examples.md  gen_ccs.ipynb  index.md  license.rst  make.bat  run_example.ipynb
docs/_build/doctrees/: changelog.doctree  environment.pickle  examples.doctree  index.doctree  license.doctree
docs/_build/html/: .buildinfo  changelog.html  examples.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: Untitled.ipynb  gen_ccs.ipynb  generate_logo.ipynb
examples/Advanced_Tutorials/: Generate_LJ_NaCl_dataset.ipynb  generate_logo.ipynb
examples/Advanced_Tutorials/BACK_FITTING_2Bodies/: CCS_error.out  CCS_error_forces.out  CCS_input.json  CCS_input_interpreted.json  CCS_params.json  G2B_input.json  LJ.db  Tutorial.ipynb  file_list  helper.py
examples/Advanced_Tutorials/CALCULATED_DATA/: S1.xyz  S2.xyz  S3.xyz  S4.xyz  S5.xyz
examples/Advanced_Tutorials/CCS/: CCS_DB.db  CCS_error.out
examples/Advanced_Tutorials/DFTB_repulsive_fitting/: DFT.db  DFTB.db  run_example.ipynb
examples/Advanced_Tutorials/NaCl_MD/: IN.data  (+13 more)
examples/Basic_Tutorial/: Basic_Tutorial.ipynb  CCS.lammps  CCS_error.out  CCS_error_forces.out  CCS_fit_tutorial.ipynb  CCS_input.json  CCS_input_interpreted.json  CCS_params.json  CCS_validate.db  LJ.db  UNC_error.out  UNC_error_forces.out  UNC_params.json  ccs.spl  file_list  tutorial.ipynb
examples/CCS/: CCS_params.json  input.json  input_interpreted.json  structures.json
examples/CeO2_DFTB/: CCS_params.json  Ce-Ce.spl  Ce-O.spl  O-O.spl  error.out  error_test.out  input.json  input_interpreted.json  tmp
examples/DFTB_repulsive_fitting/: README.md  run_example.ipynb
examples/Ne-FCC/: CCS_params.json  Ne-Ne.spl  error.out  error_test.out  input.json  input_interpreted.json
examples/O2/: CCS_params.json  error.out  error_test.out  input.json  input_interpreted.json  structures.json  t  tmp  tmp2  tt
examples/O2_force/: CCS_params.json  O-O.spl  error.out  error_test.out  input.json  input_interpreted.json  structures.json
examples/Preparing_ASE_db_trainingsets/: DFT.db  DFTB.db  run_example.ipynb  trainset.list
examples/Search_mode/: CCS_error.out  CCS_error_forces.out  CCS_input.json  CCS_input_interpreted.json  CCS_params.json  CCS_validate.db  LJ.db  UNC_error.out  UNC_error_forces.out  UNC_params.json  Untitled.ipynb  file_list  tutorial.ipynb
examples/Two_body_fit_for_an_O2_molecule/: structures.json
examples/Twobody_fit_for_an_O2_molecule/: CCS_error.out  CCS_input.json  CCS_params.json  CCS_params_diss.json  O-O.spl  input_interpreted.json  plot  plotter.ipynb  structures.json  t  tt  ttt
examples/Twobody_fit_for_an_O2_molecule_bak/: CCS_error.out  CCS_params.json  O-O.spl  RUN  plotter.ipynb  structures.json  t  tt
examples/Twobody_fit_for_solid_Ne/: input.json  run_example.ipynb
examples/ZnO/: CCS_params.json  O-O.spl  O-Zn.spl  Zn-O.spl  Zn-Zn.spl  error.out  error_test.out  input.json  input.json.bak  input1.json  input_interpreted.json  structures.json  t  tt
examples/ppmd_interfacing/: example.ipynb
examples/simple_regressor/: example.py
src/ccs/: __init__.py
src/ccs_fit/: __init__.py
tests/: test_ccs_import.py  test_tests.py
(+624 files in other folders)
