[tool.poetry]
name = "ccs_fit"
version = "0.14.6"
description = "Fitting tools for repulsive two body interactions using curvature constrained splines."
authors = [
    "Akshay Krishna AK",
    "Jolla Kullgren <jolla.kullgren@kemi.uu.se>",
    "Eddie Wadbro <eddie.wadbro@umu.se>"
    ]
maintainers = [
    "Jolla Kullgren <jolla.kullgren@kemi.uu.se>",
    "Thijs Smolders <thijs.smolders@kemi.uu.se>"
    ]
license = "GPL-3"
readme = "README.md"
homepage = "https://github.com/Teoroo-CMC/CCS"
repository = "https://github.com/Teoroo-CMC/CCS"
documentation = "https://teoroo-cmc.github.io/CCS/index.html"
keywords = ["Curvature", "Constrained", "Splines", "Two-Body", "Interatomic", "Repulsive", "Fitting"]
classifiers = [
	"Development Status :: 4 - Beta"
]
packages = [
    { include = "ccs_fit", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8"
cvxopt = ">=1.3.0"
ase = ">=3.22.1"
scipy = ">=1.9.2"
numpy = "~1.22.4"
tqdm = ">=4.64.1"
sympy = ">=1.11.1"
pandas = ">=1.5.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"
myst-nb = {version = ">=0.17.1", python = "^3.9"}
sphinx-autoapi = ">=2.0.0"
sphinx-rtd-theme = ">=1.0.0"
python-semantic-release = "7.16.1"

[build-system]
requires = [
    "poetry",
    "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "master"                           # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[project.urls]
"Homepage" = "https://github.com/Teoroo-CMC/CCS"
"Documentation" = "https://teoroo-cmc.github.io/CCS/index.html"

[tool.poetry.scripts]
ccs_build_db = "ccs_fit.scripts.ccs_build_db:main"
ccs_export_sktable = "ccs_fit.scripts.ccs_export_sktable:main"
ccs_fetch = "ccs_fit.scripts.ccs_fetch:main"
ccs_fit = "ccs_fit.scripts.ccs_fit:main"
ccs_validate = "ccs_fit.scripts.ccs_validate:main"
ccs_export_FF = "ccs_fit.scripts.ccs_export_FF:main"