[tool.poetry]
name = "ccs_fit"
version = "1.0.0"
description = "Fitting tools for repulsive two body interactions using curvature constrained splines."
authors = [
  "Akshay Krishna AK",
  "Jolla Kullgren <jolla.kullgren@kemi.uu.se>",
  "Eddie Wadbro <eddie.wadbro@umu.se>",
]
maintainers = [
  "Jolla Kullgren <jolla.kullgren@kemi.uu.se>",
  "Thijs Smolders <thijs.smolders@kemi.uu.se>",
]
license = "GPL-3"
readme = "README.md"
homepage = "https://github.com/Teoroo-CMC/CCS"
repository = "https://github.com/Teoroo-CMC/CCS"
documentation = "https://teoroo-cmc.github.io/CCS/index.html"
keywords = [
  "Curvature",
  "Constrained",
  "Splines",
  "Two-Body",
  "Interatomic",
  "Repulsive",
  "Fitting",
]
classifiers = ["Development Status :: 4 - Beta"]
packages = [{ include = "ccs_fit", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11.6"
cvxopt = ">=1.3.2"
ase = ">=3.22.1"
scipy = ">=1.12.0"
numpy = ">=1.26.4"
tqdm = ">=4.66.2"
sympy = ">=1.12.0"
pandas = ">=2.2.1"
pyyaml = ">=6.0.1"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = ">=8.0.2"
pytest-cov = ">=4.1.0"
myst-nb = ">=1.0.0"
sphinx-autoapi = ">=3.0.0"
sphinx-rtd-theme = ">=2.0.0"
python-semantic-release = ">=9.1.1"
pyright = ">=1.1.352"
flake8 = ">=7.0.0"
black = ">=24.2.0"
black-nb = ">=0.7"
flake8-bugbear = ">=24.2.6"

[build-system]
requires = ["poetry", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''(
    /(
        \.eggs          # exclude a few common directories in the
      | \.git           # root of the project
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
    | foo.py            # also separately exclude a file named foo.py in the root of the project
)'''

[tool.flake8]
max-line-length = 88
extend-select = "B950"
extend-ignore = ["E203", "E501", "E701"]

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "master"                           # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[project.urls]
"Homepage" = "https://github.com/Teoroo-CMC/CCS"
"Documentation" = "https://teoroo-cmc.github.io/CCS/index.html"

[tool.poetry.scripts]
ccs_build_db = "ccs_fit.scripts.ccs_build_db:main"
ccs_export_FF = "ccs_fit.scripts.ccs_export_FF:main"
ccs_export_sktable = "ccs_fit.scripts.ccs_export_sktable:main"
ccs_fetch = "ccs_fit.scripts.ccs_fetch:main"
ccs_fit = "ccs_fit.scripts.ccs_fit:main"
ccs_prune = "ccs_fit.scripts.ccs_prune:main"
ccs_validate = "ccs_fit.scripts.ccs_validate:main"
